# StreamGuard

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md
.github/: copilot-instructions.md
.github/workflows/: deploy-demo.yml
examples/browser-demo/: DFA_EXAMPLES.md  EXAMPLES.md  README.md  demo.js  index.html  package-lock.json  package.json  style.css
examples/java-demo/: README.md  build.sh  pom.xml
examples/java-demo/src/main/java/com/streamguard/: Decision.java  ForbiddenSequenceRule.java  GuardEngine.java  PatternRule.java
examples/java-demo/src/main/java/com/streamguard/examples/: Demo.java
examples/node-demo/: README.md  demo.ts  index.js  package-lock.json  package.json  tsconfig.json
examples/python-demo/: README.md  build.sh  demo.py  langchain_demo.py  pyproject.toml  requirements.txt
src/: core.rs  engine.rs  java.rs  lib.rs  python.rs  wasm.rs
src/rules/: mod.rs  pattern.rs  sequence.rs
tests/: aho_corasick_tests.rs  edge_case_tests.rs  integration_tests.rs  multi_rule_tests.rs  pattern_tests.rs  rewrite_tests.rs  scoring_tests.rs  sequence_tests.rs  strict_mode_tests.rs
