[package]
name = "streamguard"
version = "0.1.0"
edition = "2021"
authors = ["d-barletta"]
license = "Apache-2.0"
description = "A deterministic, streaming-first guardrail engine for LLM outputs"
repository = "https://github.com/d-barletta/StreamGuard"
keywords = ["llm", "guardrails", "streaming", "security", "safety"]
categories = ["text-processing", "parsing"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["std"]
std = []

[dependencies]
# Keep dependencies minimal - core engine should be dependency-free

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
# For testing only

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
