[package]
name = "streamguard"
version = "0.2.0"
edition = "2021"
authors = ["d-barletta"]
license = "Apache-2.0"
description = "A deterministic, streaming-first guardrail engine for LLM outputs"
repository = "https://github.com/d-barletta/StreamGuard"
keywords = ["llm", "guardrails", "streaming", "security", "safety"]
categories = ["text-processing", "parsing"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["std"]
std = []
python = ["pyo3/extension-module"]
java = ["jni"]

[dependencies]
# Core dependencies for DFA-based pattern matching
# aho-corasick: Efficient multi-pattern matching using Aho-Corasick algorithm
# Provides O(n+m) time complexity and deterministic DFA-based matching
aho-corasick = { version = "1.1", default-features = false, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dependencies.jni]
version = "0.21"
optional = true

[dev-dependencies]
# For testing only

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
