[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "streamguard-demo"
version = "0.1.0"
description = "StreamGuard Python demo examples"
requires-python = ">=3.7"

[tool.maturin]
python-source = "."
module-name = "streamguard"
features = ["python"]
manifest-path = "../../Cargo.toml"
